Update styles.css - switched to double border
groove apparently doesn't work in firefox

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 		page-break-after: always;
 		outline: 1px solid black;
 		border-color: rgba(0,0,0,0.25);
-		border-style: groove;
+		border-style: double;
 	}
 
 
